All API calls added on Swagger UI and refactored
